--- a/config/prod/config.yaml
+++ b/config/prod/config.yaml
@@ -1,5 +1,5 @@
 project_code: sage-bionetworks
 profile: {{ var.profile | default("default") }}
 region: {{ var.region }}
-template_bucket_name: "{{ environment_variable.SynapseDwInfraCfBucket }}"
+template_bucket_name: bootstrap-awss3cloudformationbucket-igkja54vcica
 template_key_prefix: {{ environment_variable.TRAVIS_BRANCH | default("testing") }}
