--- a/templates/accounts.yaml
+++ b/templates/accounts.yaml
@@ -15,7 +15,9 @@ Resources:
     Properties:
       UserName: x.schildwachter@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
+        - !Ref AWSIAMBillingManagersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
         PasswordResetRequired: true
@@ -24,7 +26,9 @@ Resources:
     Properties:
       UserName: khai.do@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
+        - !Ref AWSIAMBillingManagersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
         PasswordResetRequired: true
@@ -33,6 +37,7 @@ Resources:
     Properties:
       UserName: bruce.hoff@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
@@ -42,6 +47,7 @@ Resources:
     Properties:
       UserName: jay.hodgson@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
@@ -51,6 +57,7 @@ Resources:
     Properties:
       UserName: john.hill@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
@@ -60,6 +67,7 @@ Resources:
     Properties:
       UserName: kimyen.ladia@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
@@ -69,6 +77,7 @@ Resources:
     Properties:
       UserName: meredith.slota@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
@@ -78,7 +87,8 @@ Resources:
     Properties:
       UserName: mike.kellen@sagebase.org
       Groups:
-        - !Ref AWSIAMDeveloperUsersGroup
+        - !Ref AWSIAMAllUsersGroup
+        - !Ref AWSIAMBillingManagersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
         PasswordResetRequired: true
@@ -87,6 +97,7 @@ Resources:
     Properties:
       UserName: ziming.dong@sagebase.org
       Groups:
+        - !Ref AWSIAMAllUsersGroup
         - !Ref AWSIAMDeveloperUsersGroup
       LoginProfile:
         Password: !Ref InitNewUserPassword
@@ -97,7 +108,6 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/PowerUserAccess
         - arn:aws:iam::aws:policy/IAMReadOnlyAccess
-        - !Ref AWSIAMEnforceMfaPolicy
         - !Ref AWSIAMDynamoDenyDeletePolicy
         - !Ref AWSIAMRdsDenyDeletePolicy
   AWSIAMAdminRole:
@@ -115,7 +125,6 @@ Resources:
             Action:
               - "sts:AssumeRole"
       Path: "/"
-  
   AWSIAMDynamoDenyDeletePolicy:
     Type: 'AWS::IAM::ManagedPolicy'
     Properties:
@@ -143,6 +152,16 @@ Resources:
               - rds:DeleteDBInstance
               - rds:DeleteDBSnapshot
             Resource: "*"
+  AWSIAMOrganizationsFullAccessPolicy:
+    Type: 'AWS::IAM::ManagedPolicy'
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          -
+            Effect: "Allow"
+            Action: "organizations:*"
+            Resource: "*"
   AWSIAMAdminRolePolicy:
     Type: "AWS::IAM::Policy"
     Properties:
@@ -164,6 +183,59 @@ Resources:
       Roles:
         -
           !Ref "AWSIAMAdminRole"
+  AWSIAMAllUsersGroup:
+    Type: 'AWS::IAM::Group'
+    Properties:
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/ReadOnlyAccess
+        - !Ref AWSIAMEnforceMfaPolicy
+  AWSIAMBillingManagersGroup:
+    Type: 'AWS::IAM::Group'
+    Properties:
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/job-function/Billing
+        - !Ref AWSIAMOrganizationsFullAccessPolicy
+  # resources for logging services
+  IAMLoggingServiceManagedPolicy:
+    Type: "AWS::IAM::ManagedPolicy"
+    Properties:
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Action:
+              - 's3:GetObject'
+              - 's3:GetObjectVersion'
+              - 's3:ListBucketVersions'
+              - 's3:ListBucket'
+            Effect: Allow
+            Resource:
+              - !Join
+                - ''
+                - - 'arn:aws:s3:::elasticbeanstalk-'
+                  - !Ref AWS::Region
+                  - '-'
+                  - !Ref AWS::AccountId
+                  - '/*'
+              - !Join
+                - ''
+                - - 'arn:aws:s3:::elasticbeanstalk-'
+                  - !Ref AWS::Region
+                  - '-'
+                  - !Ref AWS::AccountId
+              - !Join
+                - ''
+                - - 'arn:aws:s3:::'
+                  - !ImportValue us-east-1-essentials-CloudtrailBucket
+                  - '/*'
+              - !Join
+                - ''
+                - - 'arn:aws:s3:::'
+                  - !ImportValue us-east-1-essentials-CloudtrailBucket
+  AWSIAMLoggingServiceGroup:
+    Type: 'AWS::IAM::Group'
+    Properties:
+      ManagedPolicyArns:
+        - !Ref IAMLoggingServiceManagedPolicy
   # policy to enforce MFA
   AWSIAMEnforceMfaPolicy:
     Type: 'AWS::IAM::ManagedPolicy'
