--- a/config/prod/AccountAlertTopics.yaml
+++ b/config/prod/AccountAlertTopics.yaml
@@ -3,7 +3,7 @@ stack_name: AccountAlertTopics
 dependencies:
   - prod/bootstrap.yaml
 parameters:
-  InitialSubscriberEmail: "sandbox@sagebase.org"
+  InitialSubscriberEmail: "synapse.dw@sagebase.org"
   EnableSubscriberSMS: "false"
   BillingThreshold: "1000"
   DeployLambda: "true"
