--- a/config/prod/jumpcloud-idp.yaml
+++ b/config/prod/jumpcloud-idp.yaml
@@ -5,7 +5,7 @@ stack_tags:
   Project: "Infrastructure"
   OwnerEmail: "it@sagebase.org"
 parameters:
-  SandboxAdminMetadata: !file_contents idp/jumpcloud/synapsedw-admin.xml
-  SandboxDeveloperMetadata: !file_contents idp/jumpcloud/synapsedw-developer.xml
+  SynapseDwAdminMetadata: !file_contents idp/jumpcloud/synapsedw-admin.xml
+  SynapseDwDeveloperMetadata: !file_contents idp/jumpcloud/synapsedw-developer.xml
 dependencies:
   - "prod/cfn-cr-saml-provider.yaml"
